[gd_scene load_steps=15 format=3]

[ext_resource type="PackedScene" uid="uid://b4fjy2aevfiwl" path="res://MGF Scene/Setup/ButtonBase.tscn" id="1"]
[ext_resource type="Script" path="res://MGF Scene/Market/PanelMessenger.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://cvk3jvoi6qdhj" path="res://MGF Scene/Notification/NotifiItem.tscn" id="3"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUICP.tres" id="6"]
[ext_resource type="FontFile" path="res://Assets2D/Fonts/UI.tres" id="6_c7c5c"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnRedCN.tres" id="6_t86cv"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUIBGN.tres" id="7_2d88x"]
[ext_resource type="Texture2D" uid="uid://cnyefrvfjakcl" path="res://Assets2D/UI/user.png" id="10"]
[ext_resource type="Script" path="res://MGF Scene/Setup/Account.gd" id="11"]
[ext_resource type="Script" path="res://MGF Scene/Setup/PanelNotifiItem.gd" id="13"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUIWhite.tres" id="13_f6pma"]
[ext_resource type="PackedScene" uid="uid://bgus0ka15pe6r" path="res://MGF Scene/Setup/ButtonClose.tscn" id="14"]
[ext_resource type="FontFile" path="res://Assets2D/Fonts/UI.tres" id="14_8kff2"]
[ext_resource type="StyleBox" uid="uid://caqacj77hshxv" path="res://Assets2D/Theme/btnUICN.tres" id="16"]

[node name="Account" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("11")

[node name="Account" parent="." instance=ExtResource("1")]
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 32.0
offset_top = 32.0
offset_right = 128.0
offset_bottom = 128.0
theme_override_styles/normal = ExtResource("16")
theme_override_styles/hover = ExtResource("6")
theme_override_styles/pressed = ExtResource("6")
theme_override_styles/disabled = ExtResource("6")
theme_override_styles/focus = ExtResource("6")
text = ""
icon = ExtResource("10")
expand_icon = true

[node name="news" type="Label" parent="Account"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("6_c7c5c")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("6_t86cv")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelNotiData" type="Panel" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = ExtResource("7_2d88x")
script = ExtResource("2")

[node name="Label" type="Label" parent="PanelNotiData"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.0869565
offset_bottom = 24.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_c7c5c")
theme_override_font_sizes/font_size = 50
text = "Messenger"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadData" type="ScrollContainer" parent="PanelNotiData"]
layout_mode = 0
anchor_left = 0.0122768
anchor_top = 0.125604
anchor_right = 0.993304
anchor_bottom = 0.978261

[node name="VBox" type="VBoxContainer" parent="PanelNotiData/LoadData"]
layout_mode = 2

[node name="NotifiItem" parent="PanelNotiData/LoadData/VBox" instance=ExtResource("3")]
layout_mode = 2

[node name="NotifiItem2" parent="PanelNotiData/LoadData/VBox" instance=ExtResource("3")]
layout_mode = 2

[node name="ButtonClose" parent="PanelNotiData" instance=ExtResource("14")]
layout_mode = 1
offset_left = -88.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = 88.0
grow_horizontal = 0

[node name="PanelNotiItem" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("7_2d88x")
script = ExtResource("13")

[node name="label" type="Label" parent="PanelNotiItem"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.0869565
offset_bottom = 24.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_c7c5c")
theme_override_font_sizes/font_size = 50
text = "Messenger"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="PanelNotiItem"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 112.0
offset_right = -16.0
offset_bottom = -16.0
theme_override_styles/panel = ExtResource("13_f6pma")

[node name="day" type="Label" parent="PanelNotiItem/Panel"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -176.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("14_8kff2")
theme_override_font_sizes/font_size = 20
text = "10/02/2020"
horizontal_alignment = 1
vertical_alignment = 1

[node name="time" type="Label" parent="PanelNotiItem/Panel"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -176.0
offset_bottom = 160.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("14_8kff2")
theme_override_font_sizes/font_size = 20
text = "05:50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="label" type="Label" parent="PanelNotiItem/Panel"]
layout_mode = 0
anchor_right = 1.0
offset_left = 32.0
offset_right = -32.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("14_8kff2")
theme_override_font_sizes/font_size = 40
text = "Người thắng, kẻ thua sau trận MU bị Palace cầm hòa"
horizontal_alignment = 1
vertical_alignment = 1

[node name="info" type="Label" parent="PanelNotiItem/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = 80.0
offset_right = -80.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("14_8kff2")
theme_override_font_sizes/font_size = 30
text = "Người thắng

Arsenal
Như mọi người có thể dự đoán, các cổ động viên Palace ở cuối đường Holmesdale đã phát điên lên khi cú đá phạt trực tiếp của Olise đi vào lưới. Và, ở một nơi nào đó ở phía bắc Luân Đôn, một người Tây Ban Nha nào đó có thể cũng rất thích nó.

Đến với trận đấu này, những người ủng hộ Man United đã sử dụng máy tính để chứng minh rằng cơ hội bắt kịp đội đầu bảng Premier League Arsenal không quá xa vời.

mikel-arteta.jpg

Tuy nhiên, bàn thắng muộn đó đồng nghĩa với việc đội bóng của Mikel Arteta vẫn dẫn đầu bảng xếp hạng với 8 điểm cách biệt, trong khi đội bóng của Ten Hag vẫn đứng thứ 3 do kém Man City về hiệu số bàn thắng bại.

Và Man United bây giờ sẽ phải cố gắng ngăn Arsenal tiến một bước quan trọng khác tới danh hiệu vào Chủ nhật mà không có Casemiro, lá bùa hộ mệnh của họ. Nhìn chung, một buổi tối không tồi cho Pháo thủ.

David de Gea
De Gea có thể không phải là một thủ môn toàn diện. Nhưng nói về khả năng cản phá thì có lẽ anh chẳng thua kém ai.

Ngay trước giờ nghỉ giải lao, Odsonne Edouard tung cú sút mà mọi người ở Selhurst Park nghĩ rằng nó sẽ đi vào lưới.

de-gea.jpg

De Gea lại có ý tưởng khác, tận dụng từng milimet của cánh tay phải để đẩy quả bóng đập vào khung gỗ. Vài phút sau, Fernandes ghi bàn ấn định chiến thắng.

Và De Gea lại được nhắc đến vào cuối hiệp hai, phản ứng nhanh để cản phá cú đánh đầu của Marc Guehi. Thật không may, anh đã không có cơ hội cho cú sút phạt của Olise, nhưng nếu không có anh, MU sẽ rời London mà không có điểm nào.

Patrick Vieira
Huấn luyện viên của Crystal Palace đã có một tâm trạng tồi tệ sau thất bại sít sao của đội bóng trước Chelsea vào cuối tuần trước.

Khi được hỏi liệu ông có cảm thấy các cầu thủ của mình xứng đáng nhận được điều gì đó từ trận đấu này hay không, Vieira chỉ nói: \"Có.\" Đó là một trong chuỗi các câu trả lời đơn âm được đưa ra bởi ông chủ đang thất vọng của Palace, người sau đó đã nhắm vào vụ mua Mykhailo Mudryk làm méo mó thị trường của The Blues."
autowrap_mode = 2
clip_text = true

[node name="ButtonClose" parent="PanelNotiItem" instance=ExtResource("14")]
layout_mode = 1
offset_left = -88.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = 88.0
grow_horizontal = 0

[connection signal="pressed" from="Account" to="." method="_on_account_pressed"]
[connection signal="pressed" from="PanelNotiData/ButtonClose" to="." method="_on_ButtonClose_pressed"]
[connection signal="pressed" from="PanelNotiItem/ButtonClose" to="." method="_on_ItemButtonExit_pressed"]
